--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
-version: '24.0.7'
+version: '3'
 
 services:
   rustapp:
     container_name: rustapp
     image: jordan.garske/rustume:0.5.0
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
-      args: 
-        DATABASEURL_URL: postgres://postgres:postgres@db:5432/postgres
-        ports:
-          -'8080:8080'
-        depends_on: 
-         - db
+      args:
+        DATABASE_URL: "postgres://postgres:postgres@db:5432/postgres"
+    ports:
+      - '8080:8080'
+    depends_on:
+      - db
+
   db:
     container_name: db
     image: postgres:12
@@ -21,8 +22,9 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     ports:
-      - '5432:5432'
+      - '5433:5432'
     volumes:
-      - pgdata:/var/lib/postgressql/data
+      - pgdata:/var/lib/postgresql/data
+
 volumes:
   pgdata: {}
