--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   rustapp:
-    container_name: rustapp
+    container_name: rustume
     image: jordan.garske/rustume:0.5.0
     build:
       context: .
