docker now working

--- a/rust/rustume/.env
+++ b/rust/rustume/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=postgres://postgres:Jordago99!@localhost/users
+DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+#postgres://postgres:Jordago99!@localhost/users
+
+ROCKET_SECRET_KEY=12345678901234567890123456789012345678901234
