--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: '3'
 services:
   rustapp:
     container_name: rustume
-    image: jordan.garske/rustume:0.5.0
+    image: rustume:0.5.0
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        DATABASE_URL: "postgres://postgres:postgres@db:5432/postgres"
+        DATABASE_URL: "postgres://postgres:postgres@my_db:5432/postgres"
     ports:
-      - '8080:8080'
+      - '8000:8000'
     depends_on:
       - db
 
@@ -22,7 +22,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     ports:
-      - '5433:5432'
+      - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
 
