--- a/rust/rustume/.env
+++ b/rust/rustume/.env
@@ -1,4 +1,12 @@
 DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+#local PC
 #postgres://postgres:Jordago99!@localhost/users
+#docker
+#postgres://postgres:postgres@db:5432/postgres
+#postgres://jordangarske:BridgeAndRemy1414!?@rustume-db.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/postgres
 
 ROCKET_SECRET_KEY=12345678901234567890123456789012345678901234
+
+#isntance:rustume-db
+#master username: jordangarske
+#BridgeAndRemy1414!#$
