--- a/rust/rustume/.env
+++ b/rust/rustume/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+DATABASE_URL=postgres://postgres:remylove1414@rustumedatabase.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumedb
 #local PC
 #postgres://postgres:Jordago99!@localhost/users
 #docker
 #postgres://postgres:postgres@db:5432/postgres
-#postgres://jordangarske:BridgeAndRemy1414!?@rustume-db.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/postgres
+#postgres://postgres:remylove1414@rustumedatabase.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumedb
 
 ROCKET_SECRET_KEY=12345678901234567890123456789012345678901234
 
