--- a/rust/rustume/.env
+++ b/rust/rustume/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:remylove1414@rustumedatabase.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumedb
+DATABASE_URL=postgres://postgres:Jordago99!@localhost/users
 #local PC
 #postgres://postgres:Jordago99!@localhost/users
 #docker
