--- a/rust/rustume/Rocket.toml
+++ b/rust/rustume/Rocket.toml
@@ -1,6 +1,6 @@
 [default.databases.my_db]
-url = "postgres://postgres:remylove1414@rustumedatabase.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumedb"
+url = "postgres://postgres:Jordago99!@localhost/users"
 [default]
 secret_key = "5lGEQSJqDo0gy34R3QC7C958vn6VUrOsPlWbUChMrDs="
-address = "0.0.0.0"
-port = 80           
+# address = "0.0.0.0"
+# port = 80         
