able to create a reference -> needs to still reload changes

--- a/rust/rustume/Rocket.toml
+++ b/rust/rustume/Rocket.toml
@@ -1,6 +1,7 @@
 [default.databases.my_db]
-url = "postgres://postgres:Jordago99!@localhost/users"
+# url = "postgres://postgres:Jordago99!@localhost/users"
+url = "postgres://jordangarske:BridgeAndRemy1414@rustumedb.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumeDB"
 [default]
 secret_key = "5lGEQSJqDo0gy34R3QC7C958vn6VUrOsPlWbUChMrDs="
-# address = "0.0.0.0"
-# port = 80         
+address = "0.0.0.0"
+port = 80
