DB rework and admin improvement

--- a/rust/rustume/.env
+++ b/rust/rustume/.env
@@ -1,4 +1,4 @@
-# DATABASE_URL=postgres://postgres:Jordago99!@localhost/users
+#DATABASE_URL=postgres://postgres:Jordago99!@localhost/users
 DATABASE_URL=postgres://jordangarske:BridgeAndRemy1414@rustumedb.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumeDB
 #local PC
 #postgres://postgres:Jordago99!@localhost/users
@@ -11,3 +11,11 @@ ROCKET_SECRET_KEY=12345678901234567890123456789012345678901234
 #isntance:rustume-db
 #master username: jordangarske
 #BridgeAndRemy1414!#$
+-- Insert 1
+INSERT INTO clients (client_password, email, admin_privilege, first_name, last_name, phone_number, profession, company) VALUES ('Jordago99!', 'Joradgo9980@yahoo.com', true, 'Jordan', 'Garske', '(701) 793-2011', 'owner of website', 'myself');
+
+-- Insert 2
+INSERT INTO clients (client_password, email, admin_privilege, first_name, last_name, phone_number, profession, company) VALUES ('ResZhutou1121!', 'xinxinw.isu@gmail.com', false, 'Xinxin', 'Wang', '5157086541', 'Product Managment Intelligence Analyst', 'Bobcat');
+
+-- Insert 3
+INSERT INTO reviews (client_id, elucidation) VALUES (2, 'Jordan is an intelligent, self-motivated, and creative individual who excels at working independently and collaboratively. He possesses a strong IT background with proficiency in multiple coding languages and a deep understanding of database systems. Jordan has a keen ability to troubleshoot and find effective solutions while optimizing workflow to enhance efficiency. His skills and work ethic make him a valuable asset to any team.');
