--- a/rust/rustume/.env
+++ b/rust/rustume/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=postgres://postgres:Jordago99!@localhost/users
-#DATABASE_URL=postgres://jordangarske:BridgeAndRemy1414@rustumedb.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumeDB
+#DATABASE_URL=postgres://postgres:Jordago99!@localhost/users
+DATABASE_URL=postgres://jordangarske:BridgeAndRemy1414@rustumedb.ctty7jlgirvi.us-east-1.rds.amazonaws.com:5432/rustumeDB
 #local PC
 #postgres://postgres:Jordago99!@localhost/users
 #docker
